<resources>
    <string name="app_name">GoCongo Magasin</string>
    <string name="title">GoCongo</string>
    <string name="sub_title">Magasin</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">À propos</string>

    <string name="title_activity_start">GoCongo Magasin</string>
    <string name="btn_connect">Se connecter</string>
    <string name="btn_stock">Stock disponible</string>
    <string name="btn_commandes">Commandes</string>
    <string name="btn_historique">Historique</string>
    <string name="btn_parametres">Paramètres</string>
    <string name="btn_retours">Vérifier Retour</string>

    <string name="police_roboto_bold">roboto_bold.ttf</string>
    <string name="police_roboto_bold2">roboto_bold2.ttf</string>
    <string name="police_roboto_black">roboto_black.ttf</string>
    <string name="police_roboto_light">roboto_light.ttf</string>
    <string name="police_roboto_reg">roboto_reg.ttf</string>
    <string name="police_sail_regular">sail_regular.otf</string>
    <string name="police_sofia_regular">sofia_regular.otf</string>
    <string name="police_pacifio">pacifio.ttf</string>
    <string name="police_lemonchi">lemonchi.ttf</string>

    <string-array name="moisDeLannee">
        <item>Mois</item>
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>

    <string-array name="moisDeLanneeAbrev">
        <item>Jan</item>
        <item>Fév</item>
        <item>Mars</item>
        <item>Avr</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juil</item>
        <item>Août</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Déc</item>
    </string-array>

</resources>
