<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/colorPrimary"
        app:logo="@mipmap/ic_icon"
        app:title="@string/title"
        app:subtitle="@string/sub_title"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="@dimen/len_40"
        android:paddingRight="@dimen/len_40"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <com.epsilonpros.gocongomagasin.views.FancyLayoutBK
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fcyConnection"
            android:padding="@dimen/len_4"
            android:layout_marginBottom="@dimen/len_32"
            app:fl_defaultColor="@color/trans"
            app:fl_focusColor="@color/green_100"
            app:fl_borderColor="@color/green_500"
            app:fl_borderWidth="@dimen/len_1"
            app:fl_radius="@dimen/len_4"
            app:fl_disabledColor="@color/trans"
            app:fl_disabledBorderColor="@color/grey_300"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:animateLayoutChanges="true"
                >
                <ImageView
                    android:id="@+id/ivConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_account"
                    android:minWidth="?attr/actionBarSize"
                    />
                <com.apg.mobile.roundtextview.RoundTextView
                    android:id="@+id/statutConnexion"
                    android:visibility="invisible"
                    android:layout_width="@dimen/len_16"
                    android:layout_height= "@dimen/len_16"
                    android:gravity="center"
                    tools:visibility="visible"
                    app:textAllCaps="true"
                    app:bgColor="@color/red_700"
                    app:allCorner="@dimen/len_16"
                    />
                <com.epsilonpros.gocongomagasin.views.TextViewTeach
                    android:id="@+id/tvConnect"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_connect"
                    android:textSize="@dimen/font_16"
                    app:police="roboto_light"
                    />
                <net.qiujuer.genius.ui.widget.Loading
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/loadingConnect"
                    android:visibility="gone"
                    app:gAutoRun="false"
                    app:gProgressStyle="circle"
                    app:gBackgroundColor="@color/trans"
                    app:gBackgroundLineSize="@dimen/len_2"
                    app:gForegroundColor="@color/colorPrimary"
                    app:gForegroundLineSize="@dimen/len_2"
                    />
            </LinearLayout>
        </com.epsilonpros.gocongomagasin.views.FancyLayoutBK>
        <com.epsilonpros.gocongomagasin.views.FancyLayoutBK
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fcyStock"
            android:padding="@dimen/len_4"
            android:layout_margin="@dimen/len_12"
            app:fl_defaultColor="@color/trans"
            app:fl_focusColor="@color/grey_300"
            app:fl_borderColor="@color/grey_500"
            app:fl_borderWidth="@dimen/len_1"
            app:fl_radius="@dimen/len_4"
            app:fl_disabledColor="@color/trans"
            app:fl_disabledBorderColor="@color/grey_300"
            android:enabled="false"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_stok"
                    android:minWidth="?attr/actionBarSize"
                    />
                <com.epsilonpros.gocongomagasin.views.TextViewTeach
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_stock"
                    android:textSize="@dimen/font_16"
                    app:police="roboto_light"
                    />
            </LinearLayout>
        </com.epsilonpros.gocongomagasin.views.FancyLayoutBK>
        <com.epsilonpros.gocongomagasin.views.FancyLayoutBK
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fcyCommandes"
            android:padding="@dimen/len_4"
            android:layout_margin="@dimen/len_12"
            app:fl_defaultColor="@color/trans"
            app:fl_focusColor="@color/grey_300"
            app:fl_borderColor="@color/grey_500"
            app:fl_borderWidth="@dimen/len_1"
            app:fl_radius="@dimen/len_4"
            app:fl_disabledColor="@color/trans"
            app:fl_disabledBorderColor="@color/grey_300"
            android:enabled="false"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_commande"
                    android:minWidth="?attr/actionBarSize"
                    />
                <com.epsilonpros.gocongomagasin.views.TextViewTeach
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_commandes"
                    android:textSize="@dimen/font_16"
                    app:police="roboto_light"
                    />
            </LinearLayout>
        </com.epsilonpros.gocongomagasin.views.FancyLayoutBK>

        <com.epsilonpros.gocongomagasin.views.FancyLayoutBK
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fcyRetours"
            android:padding="@dimen/len_4"
            android:layout_margin="@dimen/len_12"
            app:fl_defaultColor="@color/trans"
            app:fl_focusColor="@color/grey_300"
            app:fl_borderColor="@color/grey_500"
            app:fl_borderWidth="@dimen/len_1"
            app:fl_radius="@dimen/len_4"
            app:fl_disabledColor="@color/trans"
            app:fl_disabledBorderColor="@color/grey_300"
            android:enabled="false"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_retour"
                    android:minWidth="?attr/actionBarSize"
                    />
                <com.epsilonpros.gocongomagasin.views.TextViewTeach
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_retours"
                    android:textSize="@dimen/font_16"
                    app:police="roboto_light"
                    />
            </LinearLayout>
        </com.epsilonpros.gocongomagasin.views.FancyLayoutBK>

        <com.epsilonpros.gocongomagasin.views.FancyLayoutBK
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fcyHistory"
            android:padding="@dimen/len_4"
            android:layout_margin="@dimen/len_12"
            app:fl_defaultColor="@color/trans"
            app:fl_focusColor="@color/grey_300"
            app:fl_borderColor="@color/grey_500"
            app:fl_borderWidth="@dimen/len_1"
            app:fl_radius="@dimen/len_4"
            app:fl_disabledColor="@color/trans"
            app:fl_disabledBorderColor="@color/grey_300"

            android:enabled="false"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_history"
                    android:minWidth="?attr/actionBarSize"
                    />
                <com.epsilonpros.gocongomagasin.views.TextViewTeach
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_historique"
                    android:textSize="@dimen/font_16"
                    app:police="roboto_light"
                    />
            </LinearLayout>
        </com.epsilonpros.gocongomagasin.views.FancyLayoutBK>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>